--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "moment-timezone": "^0.5.13",
+    "ramda": "^0.23.0",
     "vue": "^2.2.6",
     "vue2-datepicker": "^1.2.1"
   },
